2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (checkaddfile): Improve error messages for lock_RCS failure.
	* release.c (release): Improve error message for pclose failure.

	* root.h (struct cvsroot_s): Always declare isremote to simplify
	other code.  Simplify referencing code.
	* root.c (new_cvsroot_t): Always initialize isremote.
	* server.h: Always declare server_active to simplify other code.
	Simplify referencing code.
	* server.c: Always define server_active.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* main.c, wrapper.c: Update links.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* recurse.c: Update bug report email address.

2005-08-30  Larry Jones  <lawrence.jones@ugs.com>

	* import.c (import_descend): Lock repository directory during import.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* buffer.c, buffer.h, client.h, expand_path.c, history.c, myndbm.h,
	release.c: Add copyright notices.

2005-07-11  Derek Price  <derek@ximbiot.com>

	* buffer.c, buffer.h, client.h, expand_path.c, history.c, myndbm.h,
	release.c: Update license notices.

2005-06-22  Larry Jones  <lawrence.jones@ugs.com>

        * vers_ts (Version_TS): Don't allow command line keyword expansion
        modes to override binary mode.
        * sanity.sh (): Tests for the above.
        (Merged from trunk.)

2005-06-06  Conrad T. Pino  <Conrad@Pino.com>

	* cvs.h: Reverse patch committed 2005-05-27 by Conrad T. Pino.
	* run.c: Reverse patch committed 2005-05-27 by Conrad T. Pino.

2005-06-02  Derek Price  <derek@ximbiot.com>

	* zlib.c (compress_buffer_shutdown_input): Don't attempt to read EOF
	from the client during shutdown.  It might never be sent.
	* sanity.sh (abspath2): Test for this.

2005-05-31  Derek Price  <derek@ximbiot.com>
	for Alexander Taler <alex@0--0.org>

	* rcscmds.c: Change type of call_diff_argc_allocated from int to
	size_t, to match the prototype of run_add_arg_p().  This fixes a
	bus error in OpenBSD 3.6 sparc64.
